--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<h3>Syfon[開発中]</h3>
 					<p>現在大学の学生団体に所属させて頂き、授業や大学生活に関する情報をより分かりやすく提供するWebアプリを作成しています。
 					</p>
-					<p>使用ツール：Python, Cloud_firestore, Vue.js</p>
+					<p>使用ツール：Python, Cloud_firestore, Vue.js, TypeScript</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
