--- a/index.html
+++ b/index.html
@@ -53,14 +53,18 @@
 					<h3>所属団体のホームページ</h3>
 					<p>所属している団体のホームページを作りました。</p>
 					<p>使用ツール：Vue.js,Bulma</p>
+					<a href="https://www.sg.dendai.ac.jp/s1t-volleyball/index.html" target="_blank">作品はこちらから</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/02.png" class="image fit thumb"><img src="images/thumbs/02.png" alt="" /></a>
 					<h3>CueTube</h3>
 					<p>兼部している団体の活動で利用するツールを作りました。
 						Googleフォームで送られた動画IDをキューに格納し、それに対応する動画を連続再生するというツールです。
+						説明書を読み、ダウンロードしてお使いください。
 					</p>
 					<p>使用ツール：GoogleAppsScript,YouTubeDataAPi,Vue.js</p>
+					<a href="https://drive.google.com/open?id=1r24CtXBdOtDArVuwYiqB7-tOhDDbHP0o"
+						target="_blank">作品はこちらから</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
@@ -96,6 +100,7 @@
 						タイトルがCubreakなのはCubreakを参考に作成したからです。
 					</p>
 					<p>使用ツール：Unity, Socket.io, AWS(EC2)</p>
+					<a href="https://github.com/it262/CTF" target="_blank">作品はこちらから</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/03.png" class="image fit thumb"><img src="images/thumbs/03.png" alt="" /></a>
@@ -109,6 +114,7 @@
 					<p>授業内課題。Youtubeの字幕から自然言語処理を用いて頻出単語を解析し、Qiitaの記事を推薦するアプリです。
 						精度が悪かったので動画タイトルの情報も利用しました。</p>
 					<p>使用ツール：<br>Python(Bottle etc...),nltk,YouTubeDataApi,QiitaApi,Bulma</p>
+					<a href="https://github.com/narusei/vls-app" target="_blank">作品はこちらから</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/05.png" class="image fit thumb"><img src="images/thumbs/05.png" alt="" /></a>
