--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</header>
 			<p>
 				Webサービスの開発をしたく、<br>
-				フロントとバックの両方共に積極的に勉強をしていきたいと思っています。<br>
+				フロントとバック共に積極的な学習をしていきたいと思っています。<br>
 				Vue.js、Python、Ruby on Railsを使ったWeb開発や、<br>
 				Unity、AndroidStudio、Xcodeを使ったゲームやアプリ開発に強い関心があります。<br>
 			</p>
